# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2016-03-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make cloudi_service_monitoring:update_or_create/4 work outside of
      a service process

2016-03-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI now does not use the random Erlang/OTP module with
      Erlang/OTP >= 18.0 due to it being removed in Erlang/OTP 20
    * Update uuid, varpool, quickrand

2016-03-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_trans_id:microseconds/1 and cloudi_timestamp:microseconds/0
      (using cloudi_trans_id:microseconds/1 is preferred in a CloudI service
       since the time value is always increasing within a service process
       and the function call is more efficient)
    * Add to cloudi_service_monitoring doc

2016-02-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Minor fixes for cloudi_service monitoring

2016-01-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the service indentifier used in metric names by
      cloudi_service_monitoring from the hexadecimal ServiceId UUID to
      TYPE.FILENAME.INDEX
        * TYPE is "e" for external services and "i" for internal services
        * FILENAME is the executable used for external services and the
          service module for internal services
          (for java services, this is likely "java" and for python services
           this may be "python2", if the CloudI service is
           not executed directly)
        * INDEX is the 0-based index of the service's ServiceId occurrence
          with the same TYPE and FILENAME
    * Add cloudi_lists:index/2

2016-01-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add configuration argument http_clock_skew_max to
      cloudi_service_filesystem for tolerating HTTP datetime differences
      when checking the HTTP request headers
      If-Modified-Since and If-Unmodified-Since